    - src/onmainwindow.cpp: unbreak Windows and OS X builds - directRDP is
      only available on Linux, so guard new section.
    - res/i18n/x2goclient_et.ts: various fixups for the Estonian translation
      file.
    - res/i18n/x2goclient_*.ts: go the extra mile and fix up translation files
      manually after the "anothertype" fix in
      8e503d89ee2d03a313c3deff11f0516fce503022.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.0.1):
    - Add "direct XDMCP" functionality.

  [ Robert Parts ]
  * New upstream version (4.1.0.1):
    - res/i18n/x2goclient_et.ts: update Estonian translation file.

 -- X2Go Release Manager <git-admin@x2go.org>  Wed, 22 Feb 2017 07:13:10 +0100

x2goclient (4.1.0.0-0x2go1) unstable; urgency=medium

  [ Mihai Moldovan ]
  * New upstream version (4.1.0.0):
    - src/sessionbutton.cpp: replace drop down menu button on session buttons
      with a more prominent, bigger settings gear icon. Requested for
      visibility.
    - src/onmainwindow.cpp: add debug statements to createRSAKey () regarding
      the host pub key locations on OS X.
    - src/onmainwindow.cpp: fix error message string in
      printSshDError_noHostPubKey ().
    - src/sshmasterconnection.cpp: add SecurID prompt to challenge auth code
      prompts.
    - src/sharewidget.cpp: fix compile on UNIX-like platforms by defaulting to
      ISO-8859-1 not just on Linux but also other platforms. Fixes: #1124.
    - src/x2goutils.cpp: don't try to wrap absolute paths as legacy resource
      URIs in wrap_legacy_resource_URIs (). Fixes: #910.
    - {res/img/svg/,res/resources.qrc}: add new file hamburger.svg, a
      custom-created hamburger icon.
    - src/sessionbutton.cpp: replace drop down menu button on session buttons
      again with the custom-created hamburger icon. Also fix positioning
      issues in mini mode.
    - src/onmainwindow.{cpp,h}: add new function images_resource_path (),
      similar to iconsPath () but without explicitly referring to icons.